--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     <script>
       window.$docsify = {
         name: "",
-        repo: ""
+        repo: "",
         // Whether to load navbar from _navbar.md or not
         // loadNavbar: true
+        // Enable coverpage
+        coverpage: true
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+    <script src="//unpkg.com/docsify/lib/plugins/emoji.min.js"></script>
   </body>
 </html>
