Added logo on sidebar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         // Whether to load navbar from _navbar.md or not
         // loadNavbar: true
         // Enable coverpage
-        coverpage: true
+        coverpage: true,
+        // Logo Image - can be relative as well as absolute URLs
+        logo: "/_media/1025-40x40-logo.jpg"
+        // logo: "https://picsum.photos/id/1025/40/40"
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
