Added name & repo config

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <div id="app">Loading...</div>
     <script>
       window.$docsify = {
-        name: "",
-        repo: "",
+        // Name - avoid space docsify@4.9.4
+        name: "VK-Docsify-Test",
+        // Repo URL, which will show github logo (svg) ONLY! docsify@4.9.4
+        repo: "https://github.com/vkallore/docsify",
         // Whether to load navbar from _navbar.md or not
         // loadNavbar: true
         // Enable coverpage
