Added theme color option, custom sidebar, code syntax

--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
         // Enable coverpage
         coverpage: true,
         // Logo Image - can be relative as well as absolute URLs
-        logo: "/_media/1025-40x40-logo.jpg"
-        // logo: "https://picsum.photos/id/1025/40/40"
+        logo: "/_media/1025-40x40-logo.jpg",
+        // logo: "https://picsum.photos/id/1025/40/40",
+        // nameLink : Where should the logo link to?
+        nameLink: "/TEST/",
+        // Theme color for link, github logo bg, quote & other elements
+        themeColor: "#006699",
+        // Load custom sidebar
+        loadSidebar: true,
+        // Can execute JS
+        executeScript: true
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
