404 page & show only cover done

--- a/index.html
+++ b/index.html
@@ -31,13 +31,17 @@
         logo: "/_media/1025-40x40-logo.jpg",
         // logo: "https://picsum.photos/id/1025/40/40",
         // nameLink : Where should the logo link to?
-        nameLink: "/TEST/",
+        nameLink: " /",
         // Theme color for link, github logo bg, quote & other elements
         themeColor: "#006699",
         // Load custom sidebar
         loadSidebar: true,
         // Can execute JS
-        executeScript: true
+        executeScript: true,
+        // _404.md is the custom 404 page
+        notFoundPage: true,
+        // Show only cover, link to docs handled from _coverpage.md
+        onlyCover: true
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
