namelink commented for github

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         logo: "/_media/1025-40x40-logo.jpg",
         // logo: "https://picsum.photos/id/1025/40/40",
         // nameLink : Where should the logo link to?
-        nameLink: " /",
+        // nameLink: "/",
         // Theme color for link, github logo bg, quote & other elements
         themeColor: "#006699",
         // Load custom sidebar
